# AAudioDemo

./: README.md  settings.gradle
app/: build.gradle
app/common/: audio_common.cpp  audio_common.h
app/debug-utils/: logging_macros.h  trace.cpp  trace.h
app/src/androidTest/java/com/chris/twain/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioEffect.cpp  AudioEffect.h  CMakeLists.txt  EchoAudioEngine.cpp  EchoAudioEngine.h  jni_bridge.cpp  ndk-stl-config.cmake  wavCode.cpp  wavCode.h
app/src/main/java/com/chris/twain/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java  EchoEngine.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml  audio_devices.xml  buffer_sizes_spinner.xml
app/src/main/res/values/: dimens.xml  strings.xml
app/src/test/java/com/chris/twain/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
